# weathr

./: Cargo.toml  README.md
.github/workflows/: homebrew.yml
src/: animation_manager.rs  app.rs  app_state.rs  config.rs  display.rs  error.rs  geolocation.rs  lib.rs  main.rs  onboard.rs
src/animation/: airplanes.rs  fireflies.rs
src/scene/: decorations.rs  ground.rs  house.rs  mod.rs
src/weather/: types.rs
tests/: config_integration_test.rs  display_integration_test.rs  error_test.rs  open_meteo_provider_integration_test.rs
