[package]
name = "weathr"
version = "1.3.0"
edition = "2024"
rust-version = "1.85.0"
license = "GPL-3.0-or-later"
authors = ["Dony Mulya <veirt@duck.com>"]
description = "A terminal-based ASCII weather application with animated scenes driven by real-time weather data"
repository = "https://github.com/veirt/weathr"
homepage = "https://github.com/veirt/weathr"
documentation = "https://github.com/veirt/weathr#readme"
keywords = ["weather", "terminal", "ascii", "cli", "tui"]
categories = ["command-line-utilities"]
exclude = [".github/", "docs/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dirs = "6.0"
crossterm = "0.29"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "signal",
    "fs",
] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "http2", "charset", "system-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
rand = "0.10"
chrono = "0.4"
thiserror = "2.0"
clap_complete = "4.5.66"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = false
opt-level = 2
